fix(layout): split columns gap into row and column
This prevents an issue with column width calculation

--- a/scss/layout/columns/_index.scss
+++ b/scss/layout/columns/_index.scss
@@ -8,11 +8,9 @@
 @include layer(layout) {
   .columns {
     display: grid;
-    grid-template-columns: var(
-      --#{root-defaults.$prefix}-columns,
-      repeat(auto-fit, minmax(#{$columns-min-width}, #{$columns-max-width}))
-    );
-    gap: $columns-gap;
+    grid-template-columns: $columns-grid-template-columns;
+    row-gap: $columns-row-gap;
+    column-gap: $columns-column-gap;
 
     > * {
       grid-column: span $columns-span;
